<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="AlwaysShowAction">
    <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/home"
            app:showAsAction="always|withText"/>
    <item
            android:id="@+id/order"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/order"
            app:showAsAction="always|withText" />
    <item
            android:id="@+id/notification"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/notification"
            app:showAsAction="always|withText" />
    <item
            android:id="@+id/profile"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/profile"
            app:showAsAction="always|withText" />
</menu>