<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="Autofill">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_16sdp"/>

            <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_logo"
                    android:text="@string/register_title"
                    android:textSize="@dimen/_14sdp"/>


        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/name_hint"/>

            <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/address_hint"/>

            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/email_hint"/>

            <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/username_hint"/>

            <EditText
                    android:id="@+id/et_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/phonenumber_hint"/>

            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/password_hint"/>

            <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="textPassword"
                    android:hint="@string/password_confirmation_hint"/>


        </LinearLayout>

        <LinearLayout
                android:id="@+id/viewgroup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical">

            <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textAllCaps="false"/>

            <LinearLayout
                    android:id="@+id/viewgroup_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                <View
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorPrimary"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="@string/or"/>

                <View
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorPrimary"/>

            </LinearLayout>

            <Button
                    android:id="@+id/btn_to_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/go_to_login"
                    android:textAllCaps="false"/>

        </LinearLayout>


    </LinearLayout>



</ScrollView>
